# InheritX

./: README.md
.github/workflows/: image-scanning.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260627000000_add_ping_logs.down.sql  20260627000000_add_ping_logs.up.sql
backend/src/: api.rs  auth.rs  config.rs  lib.rs  main.rs  pdf.rs  stellar_anchor.rs  telemetry.rs  yield_calculator.rs
backend/tests/: api_tests.rs
contracts/: Cargo.toml
contracts/genetic-verification/: Cargo.toml
contracts/genetic-verification/src/: lib.rs  test.rs
contracts/inheritance-contract/: Cargo.toml
contracts/inheritance-contract/src/: lib.rs  test.rs
contracts/mock-token/test_snapshots/property_tests/: prop_balance_never_negative.1.json  prop_balance_never_negative.10.json  prop_balance_never_negative.100.json  prop_balance_never_negative.101.json  prop_balance_never_negative.102.json  prop_balance_never_negative.103.json  prop_balance_never_negative.104.json  prop_balance_never_negative.105.json  prop_balance_never_negative.106.json  prop_balance_never_negative.107.json  prop_balance_never_negative.108.json  prop_balance_never_negative.109.json  prop_balance_never_negative.11.json  prop_balance_never_negative.110.json  prop_balance_never_negative.111.json  prop_balance_never_negative.112.json  prop_balance_never_negative.113.json  prop_balance_never_negative.114.json  prop_balance_never_negative.115.json  prop_balance_never_negative.116.json  prop_balance_never_negative.117.json  prop_balance_never_negative.118.json  prop_balance_never_negative.119.json  prop_balance_never_negative.12.json  prop_balance_never_negative.120.json  prop_balance_never_negative.121.json  prop_balance_never_negative.122.json  prop_balance_never_negative.123.json  prop_balance_never_negative.124.json  prop_balance_never_negative.125.json  prop_balance_never_negative.126.json  prop_balance_never_negative.127.json  prop_balance_never_negative.128.json  prop_balance_never_negative.129.json  prop_balance_never_negative.13.json  prop_balance_never_negative.130.json  prop_balance_never_negative.131.json  prop_balance_never_negative.132.json  prop_balance_never_negative.133.json  prop_balance_never_negative.134.json  (+730 more)
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/context/: CrossChainWalletContext.tsx
frontend/hooks/: useBridgeDeposit.ts
frontend/tests/: setup.ts
(+27 files in other folders)
