[workspace]
resolver = "2"
members = [
  "access-control",
  "example-contract",
  "inheritance-contract", "lending-contract",
  "borrowing-contract",
  "mock-token",
  "governance-contract",
  "loan-nft",
  "genetic-verification",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"
access-control = { path = "access-control" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
